--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
+  "TokenKey": "Lorem Ipsum is simply dummy text of the printing and typesetting industry.",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
