--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=datingapp.db"
+    "DefaultConnection": ""
   },
   "TokenKey": "Lorem Ipsum is simply dummy text of the printing and typesetting industry.",
   "Logging": {
