added tokenKey to user secrets

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "TokenKey": "Lorem Ipsum is simply dummy text of the printing and typesetting industry.",
+  "TokenKey": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
