--- a/client/angular.json
+++ b/client/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-spinner/animations/pacman.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootswatch/dist/pulse/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
