added conf for cloudinary

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  }
   "TokenKey": "",
   "Logging": {
     "LogLevel": {
