--- a/API/API.csproj
+++ b/API/API.csproj
@@ -23,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
+    <PackageReference Include="Throw" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
